<resources>
    <string name="app_name">SO WHADZ ?!</string>
    <string name="home">Home</string>
    <string name="user">User</string>
    <string name="mic">Mic</string>
    <string name="profile">Profile</string>
    <string name="synonym">Synonym</string>
    <string name="antonym">Antonym</string>
    <string name="translation">Translation</string>
    <string name="translate">Translate</string>
    <string name="OCR">OCR</string>
    <string name="speech">Speech</string>
    <string name="listen">Listen</string>
    <string name="only_title" translatable="false">Title</string>
    <string name="only_desc" translatable="false">Desc</string>
    <string name="result_here" translatable="false">Result here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="tap_to_input_text">Tap to input text...</string>
    <string name="hi">Hi, </string>
    <string name="your_name">Your name</string>
    <string name="highscore">Highscore</string>
    <string name="word_of_the_day">Word of the day</string>
    <string name="translate_it">Translate It !</string>
    <string name="submit">Submit</string>
    <string name="search_history">Search history...</string>
    <string name="clear_all">Clear all</string>
    <string name="view_history">View all history</string>
    <string name="choose_preferred_language">Choose preferred language</string>
    <string name="share_app">Share app</string>
    <string name="sign_out">Sign out</string>
    <string name="email">email</string>
    <string name="word_of_the_day_desc">Explore the word of the day !</string>
    <string name="from">From</string>
    <string name="sign_in">Sign in</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="change_theme">Change theme</string>
    <string name="intro_desc1">Just type it and you can understand it</string>
    <string name="intro_desc2">Just speak and we will translate it </string>
    <string name="intro_desc3">Take a picture, and walaaa you got it</string>
    <string name="intro_translate_it" translatable="false">Translate It !</string>
    <string name="intro_scan_it" translatable="false">Scan It !</string>
    <string name="intro_speak_it" translatable="false">Speak It !</string>
    <string name="by">By</string>
    <string name="detail_transaction">Translation Detail</string>
    <string name="time">Time</string>
    <string name="language">language</string>
    <string name="history">History</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="are_you_sure_to_delete">Are you sure to delete </string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm </string>
    <string name="attempt_left">Attempt(s) left</string>
    <string name="time_left">Time left</string>
    <string name="you_lost">You lose</string>
    <string name="history_count" translatable="false">History count(s)</string>
    <string name="all_history" translatable="false">all history</string>


    <string-array name="programming_languages">
        <item>Python</item>
        <item>Vs Code</item>
        <item>Ruby</item>
        <item>Typescript</item>
        <item>Javascript</item>
        <item>Pokimane</item>
        <item>Toast</item>
        <item>Her</item>
        <item>love</item>
    </string-array>
    <string-array name="programming_languages_desc">
        <item>This is a random desc</item>
        <item>This is a random desc</item>
        <item>This is a random desc</item>
        <item>This is a random desc</item>
        <item>This is a random desc</item>
        <item>This is a random desc</item>
        <item>This is a random desc</item>
        <item>This is a random desc</item>
        <item>This is a random desc</item>
    </string-array>
</resources>