<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:orientation="vertical"
    tools:context=".HistoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingHorizontal="8dp">

        <Button
            android:id="@+id/history_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:icon="@drawable/ic_round_arrow_back_ios_24"
            android:drawableTint="?attr/colorPrimary"
            app:iconTint="?attr/colorPrimary"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_history"
            android:gravity="center"
            android:textAllCaps="true"
            android:layout_marginRight="80dp"
            android:layout_gravity="center"
            android:fontFamily="@font/proxima_nova"
            android:textSize="16sp"
            android:textFontWeight="700"
            android:textColor="?attr/colorPrimary"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:paddingVertical="16dp"
        android:paddingHorizontal="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:cardCornerRadius="16dp"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="?attr/colorPrimary"
            android:layout_gravity="center"
            >

            <EditText
                android:id="@+id/history_page_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_round_search_24"
                android:drawablePadding="16dp"
                android:drawableTint="@color/colorWhite"
                android:fontFamily="@font/proxima_nova"
                android:hint="@string/search_history"
                android:padding="16sp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTransparentWhite"
                android:textSize="16sp"
                app:cornerRadius="16sp" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="16dp"
            >

            <TextView
                android:id="@+id/history_history_counts"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="100 History counts"
                android:fontFamily="@font/proxima_nova"
                android:textFontWeight="700"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:gravity="left|center_vertical"
                android:layout_gravity="left"
                android:textColor="?attr/textColor"
                />

            <Button
                android:id="@+id/history_clear_all_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/proxima_nova"
                android:gravity="center"
                android:text="@string/clear_all"
                android:textSize="14sp"
                android:textColor="?attr/colorPrimary"
                android:textFontWeight="600" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginHorizontal="16dp"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/history_recycler_views"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"

                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>