<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentTranslate"
    android:background="?attr/backgroundColor"
    android:id="@+id/ftranslate">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:id="@+id/translate_layout_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="?attr/colorPrimary"
                android:paddingVertical="16sp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:text="SO WHaDZ ?!"
                    android:textAllCaps="true"
                    android:fontFamily="@font/proxima_nova"
                    android:textFontWeight="800"
                    >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_select_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:layout_below="@+id/translate_layout_heading"
                android:elevation="50dp"
                >

                <Button
                    android:id="@+id/fragment_from_select_language"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/proxima_nova"
                    android:text="@string/from"
                    android:textColor="@color/colorWhite"
                    android:textFontWeight="700"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/swap_language"
                    android:layout_width="0dp"
                    android:background="@android:color/transparent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:textAllCaps="false"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    android:tint="@android:color/white"
                    app:icon="@drawable/ic_round_arrow_right_alt_24"
                    />

                <Button
                    android:id="@+id/fragment_to_select_language"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="to"
                    android:textSize="14sp"
                    android:textColor="@color/colorWhite"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:fontFamily="@font/proxima_nova"
                    android:textFontWeight="700" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_input_text"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:orientation="vertical"
                android:showDividers="end"
                android:layout_below="@+id/layout_select_language"
                android:elevation="10dp"
                >

                <EditText
                    android:id="@+id/input_translate_text"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4.5"
                    android:fontFamily="@font/proxima_nova"
                    android:padding="24sp"
                    android:gravity="start"
                    android:background="@android:color/transparent"
                    android:textColor="?attr/textColor"
                    android:textFontWeight="500"
                    android:hint="@string/tap_to_input_text"
                    android:textColorHint="?attr/textColor"
                    android:textColorHighlight="?attr/textColor"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.8"
                    android:orientation="horizontal"
                    >
                    <Button
                        android:id="@+id/text_to_speech"
                        android:background="@android:color/transparent"
                        android:drawableTint="?attr/textColor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:gravity="center"
                        app:iconGravity="textStart"
                        android:tint="?attr/tintColor"
                        android:textSize="12sp"
                        android:textFontWeight="600"
                        android:fontFamily="@font/proxima_nova"
                        android:drawableTop="@drawable/ic_round_volume_up_24"
                        android:text="@string/listen"
                        android:textColor="?attr/textColor"
                        />

                    <Button
                        android:id="@+id/ocr_button"
                        android:background="@android:color/transparent"
                        android:drawableTint="?attr/textColor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:gravity="center"
                        app:iconGravity="textStart"
                        android:tint="@android:color/white"
                        android:textSize="12sp"
                        android:textColor="?attr/textColor"
                        android:textFontWeight="600"
                        android:fontFamily="@font/proxima_nova"
                        android:drawableTop="@drawable/ic_round_camera_alt_24"
                        android:text="@string/OCR"
                        />

                    <Button
                        android:id="@+id/speech_button"
                        android:background="@android:color/transparent"
                        android:drawableTint="?attr/textColor"
                        android:textColor="?attr/textColor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:gravity="center"
                        app:iconGravity="textStart"
                        android:textFontWeight="600"
                        android:fontFamily="@font/proxima_nova"
                        android:textSize="12sp"
                        android:drawableTop="@drawable/ic_round_mic_24"
                        android:text="@string/speech"
                        android:tint="@android:color/white"
                        />


                </LinearLayout>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingHorizontal="16dp"
                        android:background="?attr/colorPrimary"
                        android:paddingVertical="4dp"
                        android:gravity="center_vertical"
                        >
                        <TextView
                            android:id="@+id/output_translate_result"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/proxima_nova"
                            android:hint=""
                            android:gravity="center_vertical"
                            android:textFontWeight="600"
                            android:padding="8sp"/>

                        <Button
                            android:id="@+id/submit_translate"
                            app:cornerRadius="64dp"
                            app:icon="@drawable/ic_round_navigate_next_24"
                            android:drawableStart="@drawable/ic_round_navigate_next_24"
                            android:layout_width="36dp"
                            android:layout_height="48dp"
                            app:iconGravity="textStart"
                            app:iconPadding="0dp"
                            app:iconSize="24dp"
                            android:background="@android:color/transparent"
                            android:layout_gravity="center"
                            android:drawableTint="?attr/textColor"
                            android:elevation="50dp"
                            android:gravity="center"
                            />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/layout_input_text"
                android:layout_marginTop="8dp"
                >

                <androidx.recyclerview.widget.RecyclerView
                    android:paddingVertical="16dp"
                    android:layout_marginHorizontal="16dp"
                    android:id="@+id/history_recycler_views"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"


                    />


                <LinearLayout
                    android:id="@+id/layout_view_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/view_history_btn"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proxima_nova"
                        android:text="@string/view_history"
                        android:textColor="?attr/colorPrimary"
                        android:textFontWeight="700"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>



        </RelativeLayout>
    </ScrollView>




</FrameLayout>